logging sms properly
